--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -217,7 +217,7 @@
                 </div>
             </section>
             <section class="content-l_col content-l_col-1-2">
-                {% include "upcoming-events.html" %}
+                {% include "templates/upcoming-events.html" %}
             </section>
         </div><!-- END .content-l -->
     </aside><!-- END .block -->
