--- a/external-site/index.html
+++ b/external-site/index.html
@@ -28,15 +28,16 @@
     External Site
 {%- endblock %}
 
-{% block primary_nav %}
+{% block primary_nav -%}
     {# No primary navigation needed on this page. #}
-{% endblock primary_nav %}
+{%- endblock %}
 
 {% block header -%}
     {% include "templates/header-external-site.html" %}
 {%- endblock %}
 
 {% block footer -%}
+    {# No footer needed on this page. #}
 {%- endblock %}
 
 {% block content_modifiers -%}
