--- a/external-site/index.html
+++ b/external-site/index.html
@@ -1,8 +1,8 @@
-{% extends "layout-full.html"  %}
-{% set request_host = 'http://' + request.host -%}
-{% set request_referrer = request.referrer or request_host -%}
+{% extends "layout-full.html" %}
+{% set request_host = 'http://' + request.host %}
+{% set request_referrer = request.referrer or request_host %}
 
-{% set request_url_param = request.args.get('ext_url') or '' -%}
+{% set request_url_param = request.args.get('ext_url') or '' %}
 {% set external_url = request_url_param or request_host %}
 
 {# TODO: Feature is disabled. Turn on when sanitized_domains is implemented.
